# sibyl

./: .gitignore  README.md  SIBYL_SENTIMENT_SPEC.md  config.example.yaml  pyproject.toml
docs/: DROPLET_BACKFILL.md  HANDOVER.md  RESEARCH_TOOL_SPEC.md  SIBYL BUILD SPEC.md  llm_audit_plan.md  parallel_processing.md  scaling_10q_with_cloud_vm.md  validation_labelling_guide.md
scripts/: aggregate_audit.py  chart_aapl_only.py  prepare_audit.py  relabel_sections_v2.py  remediate_incorp_ref.py  smoke_sp500.py
sibyl/: aggregate.py  chart.py  cli.py  config.py  db.py  diff.py  download.py  edgar.py  export.py  lm_dictionary.py  parse.py  prices.py  queried.py  rank.py  runner.py  score.py  sections.py  serve.py  signals.py  sp500.py  tickers.py  universe.py  wiki.py
sibyl/eval/: __init__.py
templates/: report.html
tests/: test_aggregate.py  test_chart.py  test_config.py  test_config_paths.py  test_db_schema.py  test_diff.py  test_download.py  test_parse.py  test_queried.py  test_runner.py  test_score.py  test_sections.py  test_sp500.py  test_tickers.py  test_universe.py  test_wiki.py
tests/fixtures/: _make_sample_10k.py  company_tickers_sample.json  submissions_sample.json  universe_sample.json
