[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sibyl"
version = "0.1.0"
description = "SEC filing signal research engine"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "edgartools==5.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]

[project.scripts]
sibyl = "sibyl.cli:main"

[tool.setuptools.packages.find]
include = ["sibyl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
