[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sibyl"
version = "0.2.0"
description = "S&P 500 sentiment monitor (Loughran-McDonald negative score, MD&A + Risk Factors)"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "edgartools==5.36.0",
    "flask>=3.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]

[project.scripts]
sibyl = "sibyl.cli:main"

[tool.setuptools.packages.find]
include = ["sibyl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
